--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-json-format": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-xml2json": "^0.1.5"
   }
